--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
             <div class="nav__logo">
                 <a href="index.html" class="nav__logo-text">
                     <img src="assets/img/profilepic.png" alt="">
-                    
+
                 </a>
             </div>
             <div class="nav__menu">
                 <div class="menu">
                     <ul class="nav__list">
                         <li class="nav__items">
-                            <a href="#home" class="nav__link active-link">Home</a>
+                            <a href="#home" class="nav__link active-link" onclick="closeSideBar()">Home</a>
                         </li>
                         <li class="nav__items">
-                            <a href="#about" class="nav__link">About</a>
+                            <a href="#about" class="nav__link" onclick="closeSideBar()">About</a>
                         </li>
                         <li class="nav__items">
-                            <a href="#skills" class="nav__link">Skills</a>
+                            <a href="#skills" class="nav__link" onclick="closeSideBar()">Skills</a>
                         </li>
                         <li class="nav__items">
-                            <a href="#work" class="nav__link">Work</a>
+                            <a href="#work" class="nav__link" onclick="closeSideBar()">Work</a>
                         </li>
                         <li class="nav__items">
-                            <a href="#services" class="nav__link">Services</a>
+                            <a href="#services" class="nav__link" onclick="closeSideBar()">Services</a>
                         </li>
                         <!-- <li class="nav__items">
                             <a href="#contact" class="nav__link">Contact</a>
