--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
             </div>
 
-            <div class="btn__share">
+            <!-- <div class="btn__share">
                 <i class="uil uil-share-alt social__share"></i>
-            </div>
+            </div> -->
 
             <div class="nav__close" id="nav-close">
                 <i class="uil uil-times"></i>
@@ -641,7 +641,7 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <h1 class="footer__title">Shreyas</h1>
+                        <h1 class="footer__title">Shreyas M J Kalkur</h1>
                         <span class="footer__subtitle">Full stack developer</span>
                     </div>
                     <ul class="footer__links">
@@ -658,9 +658,10 @@
                         <a href="https://github.com/Shreyas-Kalkur" target="_blank" class="footer__social">
                             <i class="uil uil-github"></i>
                         </a>
-                        <a href="https://x.com/shreyas018" target="_blank" class="footer__social">
-                            <i class="uil uil-twitter"></i>
+                        <a href="https://drive.google.com/file/d/1crxqud9PNaXABzSu5Up74ENVNTh1spFh/view?usp=sharing"
+                            class="home__social-link " target="_blank"><i class="uil uil-file " title="Resume"></i>
                         </a>
+
                     </div>
                 </div>
             </div>
