--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="my__info">
                     <div class="info__item">
-                        <i class="uil uil-whatsapp info__icon"></i>
+                        <i class="uil uil-whatsapp info__icon1"></i>
                         <div>
                             <!-- <h3 class="info__title">Whatsapp</h3> -->
                             <span class="info__subtitle"><a href="tel: +91 8217887930" class="info__subtitle">+91
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="info__item">
-                        <i class="uil uil-envelope-edit info__icon"></i>
+                        <i class="uil uil-envelope-edit info__icon2"></i>
                         <div>
                             <!-- <h3 class="info__title">Email</h3> -->
                             <span class="info__subtitle"><a href="mailto:shreyaskalkur@gmail.com"
