--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         <section class="services section" id="services">
             <h2 data-heading="Services" class="section__title">What I offer</h2>
             <div class="services__container container grid">
-                <div class="services__content">
+                <!-- <div class="services__content">
                     <div>
                         <i class="uil uil-edit  services__icon"></i>
                         <h3 class="services__title">UI/UX<br>Design</h3>
@@ -521,7 +521,7 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="services__content">
                     <div>
                         <i class="uil uil-arrow services__icon"></i>
