--- a/index.html
+++ b/index.html
@@ -494,10 +494,10 @@
         <section class="services section" id="services">
             <h2 data-heading="Services" class="section__title">What I offer</h2>
             <div class="services__container container grid">
-                <!-- <div class="services__content">
+                <div class="services__content">
                     <div>
                         <i class="uil uil-edit  services__icon"></i>
-                        <h3 class="services__title">UI/UX<br>Design</h3>
+                        <h3 class="services__title">UI<br>Design</h3>
                     </div>
                     <span class="services__button">
                         View more <i class="uil uil-arrow-right services__button-icon"></i>
@@ -505,14 +505,14 @@
                     <div class="services__modal">
                         <div class="services__modal-content">
                             <i class="uil uil-times services__modal-close"></i>
-                            <h3 class="services__modal-title">UI/UX design</h3>
+                            <h3 class="services__modal-title">UI design</h3>
                             <p class="services__modal-description">
-                                I provide user-centric UI/UX design services, crafting visually appealing and intuitive
+                                I provide user-centric UI design services, crafting visually appealing and intuitive
                                 interfaces that enhance user experience.</p>
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p class="services__modal-info">UI/UX design</p>
+                                    <p class="services__modal-info">UI Design</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
@@ -521,7 +521,7 @@
                             </ul>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="services__content">
                     <div>
                         <i class="uil uil-arrow services__icon"></i>
